--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -31,11 +31,34 @@ page-home {
   }
 
   .footer {
+    z-index: 10000;
     position: absolute !important;
     bottom: 0;
     left: 0;
     right: 0;
     background-color: lightgray;
     padding: 0 16px;
+  }
+
+  .buzzing {
+    animation: shake 0.82s cubic-bezier(.36,.07,.19,.97) both;
+  }
+
+  @keyframes shake {
+    10%, 90% {
+      transform: translate3d(-1px, 0, 0);
+    }
+
+    20%, 80% {
+      transform: translate3d(2px, 0, 0);
+    }
+
+    30%, 50%, 70% {
+      transform: translate3d(-4px, 0, 0);
+    }
+
+    40%, 60% {
+      transform: translate3d(4px, 0, 0);
+    }
   }
 }
